--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -9,4 +9,7 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 3000
+    - protocol: TCP
+      port: 4321
+      targetPort: 80
   type: LoadBalancer 
